--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,10 +3,27 @@
 
 :root {
     --primary-color: #fe2c55;
-
+    --black-color: #000;
+    --text-color: #333;
     // Default Layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --search-height: 46px;
+    --search-border-radius: 92px;
+    --search-button-width: 52px;
+    --search-top-spacer: 9px;
+}
+
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    text-decoration: none;
+    color: var(--text-color);
 }
 
 * {
