--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,16 +1,86 @@
 .wrapper {
-    height: var(--default-layout-header-height);
     width: 100%;
+    height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
     align-items: center;
-}
 
-.inner {
-    height: 100%;
-    width: var(--default-layout-width);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    .inner {
+        height: 100%;
+        width: var(--default-layout-width);
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .search {
+        width: 361px;
+        height: var(--search-height);
+        border-radius: var(--search-border-radius);
+        background-color: #f1f1f2;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 16px;
+        position: relative;
+        border: 1.5px solid transparent;
+
+        &::after {
+            position: absolute;
+            content: '';
+            height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+            width: 1px;
+            background-color: #333;
+            right: var(--search-button-width);
+            background-color: #e4e4e4;
+        }
+
+        &:focus-within {
+            border-color: rgba(22, 24, 35, 0.2);
+        }
+
+        input {
+            background-color: transparent;
+            width: 252px;
+            height: 22px;
+            caret-color: var(--primary-color);
+            line-height: 2.2rem;
+            font-size: 1.6rem;
+            color: #161823;
+        }
+
+        input:not(:placeholder-shown) ~ .search-btn {
+            color: rgba(22, 24, 35, 0.75);
+        }
+
+        .clear,
+        .loading {
+            position: absolute;
+            right: calc(var(--search-button-width) + 16px);
+            top: 50%;
+            transform: translateY(-50%);
+            color: rgba(22, 24, 35, 0.34);
+        }
+
+        .search-btn {
+            width: var(--search-button-width);
+            height: 100%;
+            border-top-right-radius: var(--search-border-radius);
+            border-bottom-right-radius: var(--search-border-radius);
+            background-color: transparent;
+
+            color: rgba(22, 24, 35, 0.34);
+            font-size: 1.8rem;
+
+            &:hover {
+                cursor: pointer;
+                background-color: rgba(22, 24, 35, 0.03);
+            }
+
+            &:active {
+                background-color: rgba(22, 24, 35, 0.06);
+            }
+        }
+    }
 }
