--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -14,8 +14,12 @@
         justify-content: space-between;
     }
 
-    .search {
+    .search,
+    .search-result {
         width: 361px;
+    }
+
+    .search {
         height: var(--search-height);
         border-radius: var(--search-border-radius);
         background-color: #f1f1f2;
