--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -65,6 +65,10 @@
             top: 50%;
             transform: translateY(-50%);
             color: rgba(22, 24, 35, 0.34);
+
+            &:hover {
+                cursor: pointer;
+            }
         }
 
         .search-btn {
