--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,6 +5,7 @@
     --primary-color: #fe2c55;
     --black-color: #000;
     --text-color: #333;
+    --white-color: #fff;
     // Default Layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
