--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -19,6 +19,15 @@
         width: 361px;
     }
 
+    .search-title {
+        height: 30px;
+        padding: 4px 12px;
+        font-size: 1.4rem;
+        line-height: 2rem;
+        font-weight: 600;
+        color: rgba(22, 24, 35, 0.5);
+    }
+
     .search {
         height: var(--search-height);
         border-radius: var(--search-border-radius);
