--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -8,6 +8,10 @@
     background-color: var(--white-color);
     border: 1px solid transparent;
     user-select: none;
+    display: inline-flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 
     + .wrapper {
         margin-left: 8px;
@@ -17,6 +21,11 @@
         pointer-events: none;
         opacity: 0.5;
     }
+}
+
+.icon + .title,
+.title + .icon {
+    margin-left: 8px;
 }
 
 // button type
